# factored-datathon

./: LICENSE  README.md
base/: pyproject.toml
base/minerva_elders/base/db/: bronze.py
ddls/: events_gkg.sql  events_silver.sql  join_examples.sql
flows/: README.md  pyproject.toml
flows/flows/: ingestion.py
flows/libs/base/: README.md
flows/libs/base/minerva_elders/base/: gdelt.py  io.py
flows/libs/base/minerva_elders/base/db/: utils.py
